Add meta data for 001-markdown-demo.

--- a/001-markdown-demo/index.html
+++ b/001-markdown-demo/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="author" content="Yuen Ying Kit">
 		<title>reveal.js - Markdown Demo</title>
 		<link rel="stylesheet" href="../css/reveal.css">
 		<link rel="stylesheet" href="../css/theme/default.css" id="theme">
