--- a/001-markdown-demo/index.html
+++ b/001-markdown-demo/index.html
@@ -4,10 +4,14 @@
 		<meta charset="utf-8">
 		<meta name="author" content="Yuen Ying Kit">
 		<title>reveal.js - Markdown Demo</title>
-		<link rel="stylesheet" href="../css/reveal.css">
+		<link rel="stylesheet" href="../css/reveal.min.css">
 		<link rel="stylesheet" href="../css/theme/default.css" id="theme">
     <!-- For syntax highlighting -->
     <link rel="stylesheet" href="../lib/css/zenburn.css">
+
+    <!--[if lt IE 9]>
+    <script src="lib/js/html5shiv.js"></script>
+    <![endif]-->
 	</head>
 	<body>
 		<div class="reveal">
@@ -17,7 +21,7 @@
       </div>
 		</div>
 		<script src="../lib/js/head.min.js"></script>
-		<script src="../js/reveal.js"></script>
+		<script src="../js/reveal.min.js"></script>
 		<script>
 			Reveal.initialize({
 				controls: true,
