add 003-think-for-yourself slides.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <ul>
     <li><a href="http://ykyuen.github.io/slides/001-markdown-demo/" target="_blank">001-markdown-demo</a></li>
     <li><a href="http://ykyuen.github.io/slides/002-intro-to-drupal/" target="_blank">002-intro-to-drupal</a></li>
+    <li><a href="http://ykyuen.github.io/slides/003-think-for-yourself/" target="_blank">003-think-for-yourself</a></li>
   </ul>
 </body>
 </html>
