--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="http://ykyuen.github.io/slides/002-intro-to-drupal/" target="_blank">002-intro-to-drupal</a></li>
     <li><a href="http://ykyuen.github.io/slides/003-think-for-yourself/" target="_blank">003-think-for-yourself</a></li>
     <li><a href="http://ykyuen.github.io/slides/004-intro-to-meteor/" target="_blank">004-intro-to-meteor</a></li>
+    <li><a href="http://ykyuen.github.io/slides/005-intro-to-foundation/" target="_blank">005-intro-to-foundation</a></li>
   </ul>
 </body>
 </html>
